# traffic-monitor

./: .gitignore  AGENTS.md  Caddyfile  README.md  main.py  monitor.sh  pyproject.toml  traffic-api.service
data/: routes.json
notebooks/: TrafficAPI.ipynb  TrafficPlots.ipynb
static/: app.js  index.html  manifest.json  sw.js
tests/: test_analytics.py  test_monitor.py  test_notifications_logic.py  test_tomtom_client.py
traffic_monitor/: __init__.py  analytics.py  api.py  config.py  dependencies.py  monitor.py  notifications.py  plotting.py  push.py  state.py  tomtom.py
